[project]
name = "store"
version = "0.0.1"
description = "API for testing SQLAlchemy"
authors = [
    { name = "GDWR", email = "gregory.dwr@gmail.com" },
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "sqlalchemy==2.0.29",
    "faker==25.4.0",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.scripts]
dev = "uvicorn store:app"
